assets/main.css
body {
    --bg-color: #009688;
    --font-color: #222222;
    --font-color-inverted: #fafafa;
    --card-color: #fafafa;
    --link-color: #009688;
    --action-color: #e64a19;
    --action-color-10: #e64a191a;
    --footer-bg-color: #222222;
    --selection-bg-color: #4DB6AC;
    --selection-font-color: #fafafa;
    --header-background: url(/assets/header.svg);
    --tag-icon: url('/assets/icons/tag.svg');
    --aside-warning-bg: #FFA000;
}

@media (prefers-color-scheme: dark) {
    body {
        --bg-color: #210b6d;
        --font-color-inverted: #fafafa;
        --font-color: #fafafa;
        --link-color: #e61971;
        --card-color: #222222;
        --action-color: #e61971;
        --action-color-10: #e619711a;
        --footer-bg-color: #222222;
        --selection-bg-color: #5623b0;
        --selection-font-color: #fafafa;
        --header-background: url(/assets/header_dark.svg);
        --tag-icon: url('/assets/icons/tag_dark.svg');
        --aside-warning-bg: #e61971;
    }
}

body, html {
    font-family: Roboto, sans-serif;
    color: var(--font-color);
    margin: 0;
    padding: 0;
}

body {
    background-color: var(--bg-color);
}

body>header {
    width: 100%;
    height: 24vw;
    min-height: 16em;
    max-height: 24em;
    padding-top: 4em;
    background-image: var(--header-background);
    background-size: cover;
    background-position: center bottom;
    background-repeat: no-repeat;
}

header>h1 {
    text-align: center;
}

header>h1>a {
    font-size: 3rem;
    font-weight: 300;
    color: var(--font-color-inverted);
}

header>.subtitle {
    margin-top: 0.5em;
    text-align: center;
    font-weight: 300;
    color: var(--font-color-inverted);
}

nav {
    margin-top: 2em;
}

nav>ul {
    display: flex;
    list-style: none;
    gap: 0.5em;
    flex-direction: row;
    justify-content: center;
}

nav>ul img {
    width: 2em;
    padding: 0.5em;
}

main {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 2em;
    align-items: flex-start;
    margin: 0 1em 2em;
}

main>h2 {
    flex-basis: 100%;
    text-align: center;
    color: #ffffff;
}

article {
    max-width: 48em;
    background: var(--card-color);
    box-shadow: 0 .5em 1em rgb(0 0 0 / 20%);
    border-radius: 1em;
    overflow: hidden;
}

article.preview {
    max-width: 40em;
}

.hoverable {
    transition: box-shadow, transform 0.2s ease-in-out;
    transform: scale(1);
}

.hoverable:hover {
    box-shadow: 0 1em 4em rgb(0 0 0 / 20%);
    transform: scale(1.01);
}

article>header {
    position: relative;
}

article>header>div::after {
    position: absolute;
    bottom: 0;
    left: 0;
    content: ' ';
    height: 100%;
    min-height: 4em;
    width: 100%;
    display: block;
    background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0, rgba(0, 0, 0, 0.6) 66%, rgba(0, 0, 0, 1) 100%);
    opacity: .8;
}

article>header.scrim-0>div::after {
    opacity: 0;
}

article>header.scrim-0\.1>div::after {
    opacity: 0.1;
}

article>header.scrim-0\.2>div::after {
    opacity: 0.2;
}

article>header.scrim-0\.3>div::after {
    opacity: 0.3;
}

article>header.scrim-0\.4>div::after {
    opacity: 0.4;
}

article>header.scrim-0\.5>div::after {
    opacity: 0.5;
}

article>header.scrim-0\.6>div::after {
    opacity: 0.6;
}

article>header.scrim-0\.7>div::after {
    opacity: 0.7;
}

article>header.scrim-0\.8>div::after {
    opacity: 0.8;
}

article>header.scrim-0\.9>div::after {
    opacity: 0.9;
}

article>header.scrim-1>div::after {
    opacity: 1;
}

article>header>img {
    width: 100%;
    min-height: 8em;
    background-color: var(--bg-color);
    margin: 0;
    display: block;
}

h1 {
    font-weight: 300;
    font-size: 2.5rem;
}

h1, h2, p, aside, li {
    font-weight: 300;
}

aside, p, li {
    font-size: 1rem;
    line-height: 1.5em;
}

article>header>div {
    width: 100%;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    position: absolute;
    box-sizing: border-box;
    bottom: 0;
    padding: 0.5em 2em;
    align-items: baseline;
    justify-content: space-between;
}

article>header h1 {
    margin: 0;
    color: var(--font-color-inverted);
    z-index: 1;
}

article>header time {
    margin: 0;
    color: var(--font-color-inverted);
    z-index: 1;
}

article>p {
    margin: 1rem 2rem;
}

article>ul.action {
    margin: 1em;
    display: flex;
    gap: 0.5em;
    flex-wrap: wrap;
}

article h1 {
    margin: 2rem;
}

article>img {
    width: 100%;
}

article>time {
    float: right;
    margin: 2em;
}

article h2, article h3, article h4 {
    margin: 1.5rem 2rem 0.5rem;
}

a {
    text-decoration: none;
    color: var(--link-color);
    font-weight: 400;
}

figure {
    margin: 2em;
    display: flex;
    align-content: center;
    align-items: center;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-around;
    gap: 2em;
    width: calc(100% - 4em);
}

figure img{
    flex: 0 0 auto;
    max-width: min(24em, 100%);
}

figure>figcaption {
    max-width: 16em;
    text-align: center;
}

video {
    width: 100%;
}

aside {
    position: relative;
    background-color: var(--aside-warning-bg);
    color: var(--font-color-inverted);
    float: right;
    width: 100%;
    max-width: 40em;
    box-sizing: border-box;
    padding: 1em 1em 1em 4em;
    font-weight: 300;
    margin: 1em 0;
}

aside::before {
    content: '';
    width: 2em;
    height: 100%;
    position: absolute;
    left: 1em;
    top: 0;
    display: block;
    background: url('/assets/icons/warning.svg');
    background-repeat: no-repeat;
    background-size: contain;
    background-position: center;
}

figure.phone img{
    padding: 2% 2% 2% 2%;
    border-radius: 2em;
    outline: 2px #464646 solid;
    background: linear-gradient(31deg, black, #343434);
    aspect-ratio: 0.52;
    object-fit: contain;
    box-shadow: 0 2px 16px 0 #0000006e;
}

article > ul {
    margin: 1rem 2rem;
}

ul.tags {
    list-style: inside var(--tag-icon);
    margin: 2rem;
    gap: 1rem;
    justify-content: flex-end;
    color: var(--action-color);
    clear: both;
    display: flex;
    flex-wrap: wrap;
}

ul.tags>li>a {
    color: var(--action-color);
}

ul.action {
    list-style: none;
    padding: 0;
}

ul.action>li {
    display: block;
}

ul.action>li>a {
    display: block;
    text-transform: uppercase;
    text-decoration: none;
    color: var(--action-color);
    padding: 1em;
    border-radius: 0.5em;
}

ul.action>li>a:hover {
    background: var(--action-color-10);
}

footer {
    background: var(--footer-bg-color);
}

footer>ul {
    list-style: none;
    padding: 0;
    display: flex;
    gap: 0.5em;
    flex-wrap: wrap;
    justify-content: center;
    padding: 0.5em;
}

footer>ul>li>a {
    text-decoration: none;
    color: var(--font-color-inverted);
    padding: 0.5em;
}

footer>ul>li {
    text-align: right;
}

footer>ul>li:first-child {
    flex: 1.5;
}
footer>ul>li:last-child {
    flex: 1;
}

article ::selection {
    background-color: var(--selection-bg-color);
    color: var(--selection-font-color);
}

